# kmeans-wasm

./: .gitignore  index.html  package-lock.json
crate/: Cargo.toml
crate/src/: kmeans.rs  lib.rs  point.rs
js/: index.js
