[package]
authors = ["Alex Iansiti <aiansiti@outlook.com>"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Parcel project!"
license = "Apache-2.0/MIT"
name = "kmeans-wasm"
readme = "./README.md"
# repository = "https://github.com/rustwasm/rust-parcel-template"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
serde_json = "1.0.39"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Also as of wee_alloc v0.4.2, does not yet work on stable
# (tested with rust v1.31.1).
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dependencies.serde] 
version = "1.0.91"
features=["derive"]

[dependencies.rand]
version = "0.6.5"
features = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "0.2.29"
features = ["serde-serialize"]


[features]
default = ["console_error_panic_hook"]
